Fix message count badge alignment in the Console
Screenshot: https://imgur.com/a/P3dv7en

Bug:none

--- a/front_end/panels/console/consoleView.css
+++ b/front_end/panels/console/consoleView.css
@@ -189,7 +189,7 @@
 
 .console-message-wrapper {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   margin: 4px;
   border-radius: 5px;
 
